force-app/main/default/objects/Materials__c/Materials__c.object-meta.xml
<CustomObject>
    <description>Created by AppSheet</description>
    <label>Materials</label>
    <nameField>
        <label>Materials</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materialss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>