force-app/main/default/objects/Materials__c/fields/Download_CSV__c.field-meta.xml
<CustomField>
    <fullName>Download_CSV__c</fullName>
    <label>Download CSV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>