force-app/main/default/objects/Materials__c/fields/Material_ID__c.field-meta.xml
<CustomField>
    <fullName>Material_ID__c</fullName>
    <externalId>true</externalId>
    <label>Material ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>