force-app/main/default/objects/Materials__c/fields/Save_New_Bin__c.field-meta.xml
<CustomField>
    <fullName>Save_New_Bin__c</fullName>
    <label>Save New Bin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>