force-app/main/default/objects/Materials__c/fields/Supplier_ID__c.field-meta.xml
<CustomField>
    <fullName>Supplier_ID__c</fullName>
    <label>Supplier ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>